--- a/webroot/bigsound.html
+++ b/webroot/bigsound.html
@@ -29,7 +29,7 @@
 	<body>
 
 		<div id="app"></div>
-		<script src="dist/scripts.js" type="text/javascript"></script>
+		<script src="dist/bigsound.js" type="text/javascript"></script>
 
 	</body>
 </html>
