--- a/webroot/tree.html
+++ b/webroot/tree.html
@@ -29,7 +29,7 @@
 	<body>
 
 		<div id="app"></div>
-		<script src="dist/take2.js" type="text/javascript"></script>
+		<script src="dist/tree.js" type="text/javascript"></script>
 
 	</body>
 </html>
